--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
  <body>
   <h1>Заголовок</h1>
   <!-- Комментарий -->
-  <p>Первый абзац.</p>
+  <p>I’m currently working on ... - 🌱 I’m currently learning ... - 👯 I’m looking to collaborate on ... - 🤔 I’m looking for help with ...
+
+I’m currently working on ... - 🌱 I’m currently learning ... - 👯 I’m looking to collaborate on ... - 🤔 I’m looking for help with ...</p>
   <p>Второй абзац.</p>
  </body>
 </html>
